# Simple Thread
add_executable(simpleThread simpleThread/simpleThread.cpp)

# Thread addition
add_executable(threadAddition threadAddition/threadAddition.cpp)

# Mutex
add_executable(createMutex mutex/createMutex.cpp)

# Synchronized print
add_executable(synchronizedPrintWin32Api mutex/synchronizedPrint.cpp)
